# djafatt

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  restart-dockers.sh  vite.config.js
apps/common/: exceptions.py  helpers.py  logging.py  mixins.py  validators.py
apps/contacts/: admin.py  forms.py  models.py  urls.py  views.py
apps/core/: auth_views.py  context_processors.py  forms.py  models.py  urls.py  views.py  views_settings.py  views_users.py
apps/invoices/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  urls_purchase.py  urls_reports.py  urls_self.py  urls_sequences.py  urls_vat_rates.py  (+8 more)
deploy/: djafatt-celery.service  djafatt.service
djafatt/: asgi.py  celery.py  urls.py  wsgi.py
docs/: API.md  ARCHITECTURE.md  COMPATIBILITY.md  DEVELOPMENT.md  MODELS.md  README.md  SECURITY_REVIEW.md
scripts/: check_invoices.py  check_results.py  create_products.py  import_fatt2025.py  scan_xml.py  update_sdi_codes.py
tasks/: ANALISI-ARCHITETTURA-SICUREZZA.md  README.md  T00-convenzioni-agenti.md  T01-scaffold.md  T01e-ci-quality-gates.md  T02-models-anagrafiche.md  T03-models-fattura.md  T03b-error-handling-osservabilita.md  T04-auth-setup.md  T05-layout-navigazione.md  T06-crud-contatti.md  T07-crud-aliquote-iva.md  T08-crud-sequenze.md  T09-crud-prodotti.md  T10-crud-fatture-vendita.md  T11-engine-calcolo-totali.md  T12-righe-fattura-htmx.md  T13-crud-fatture-acquisto.md  T14-crud-autofatture.md  T15-import-xml.md  T16-import-csv-fattura24.md  T17-xml-generator-vendite.md  T18-xml-generator-autofatture.md  T19-client-openapi-sdi.md  T20-webhook-sdi.md  T20b-hardening-webhook-sdi.md  T21-sync-fornitori-command.md  T22-supplier-invoice-model-ui.md  T23-dashboard-metriche.md  T24-pagine-settings.md  T25-anno-fiscale.md  T26-sdi-log-audit.md  T27-traduzioni.md  T28-docker-produzione.md  T29-test-suite.md  T29b-test-integrazione-sicurezza.md  T30-brandfetch-logo.md  T31-pdf-generation.md  T32-notifiche-email-pec.md  T33-scadenze-pagamenti.md  (+4 more)
templates/: base.html
tests/: conftest.py  factories.py  test_calculations.py  test_error_handling.py  test_invoice_features.py  test_models.py  test_multiuser.py  test_openapi_client.py  test_payment_dues.py  test_reports.py  test_sdi_connection.py  test_sdi_sandbox.py  test_sdi_send.py  test_views.py  test_webhook.py  test_xml_generator.py  test_xml_import.py
(+87 files in other folders)
